crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knots__I128-knot-stitch-gather-counts.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knots/I128-knot-stitch-gather-counts
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "1 1\n" [Continue]
> "2 2\n" [Continue]
> "3 3\n" [Continue]
> "1 1\n" [Continue]
> "2 1\n" [Continue]
> "3 1\n" [Continue]
> "1 2\n" [Continue]
> "2 2\n" [Continue]
> "3 2\n" [Continue]
> "1 1\n" [Continue]
> "2 1\n" [Continue]
> "3 1\n" [Continue]
> "1 2\n" [Continue]
> "2 2\n" [Continue]
> "3 2\n" [Done]
outcome: Done
