crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knots__I129-knot-do-not-gather.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knots/I129-knot-do-not-gather
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "g\n" [Done]
outcome: Done
