crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knots__knot-dot-gather.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knots/knot-dot-gather
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "g\n" [Done]
outcome: Done
