crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knots__knot-thread-interaction2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knots/knot-thread-interaction2
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "I’m in a tunnel\n" [Continue]
> "When should this get printed?\n" [Choices: "I’m an option" (0) -> 0]
> "I’m an option\n" [Continue]
> "Finishing thread.\n" [Done]
outcome: Done
